[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scenes/ocean_surface/OceanSurface.gd" id="1_ocean"]
[ext_resource type="Script" path="res://scripts/vehicle/VehicleController.gd" id="2_vehicle"]
[ext_resource type="Script" path="res://scenes/ocean_surface/DiveSpot.gd" id="3_dive"]
[ext_resource type="Shader" path="res://assets/shaders/ocean_surface.gdshader" id="4_shader"]
[ext_resource type="Script" path="res://scripts/vehicle/VehicleStateMachine.gd" id="6_vsm"]
[ext_resource type="Script" path="res://scripts/ui/VehicleHUD.gd" id="7_vhud"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ocean"]
shader = ExtResource("4_shader")
shader_parameter/deep_color = Color(0.05, 0.2, 0.45, 1)
shader_parameter/shallow_color = Color(0.1, 0.35, 0.6, 1)
shader_parameter/highlight_color = Color(0.3, 0.55, 0.8, 1)
shader_parameter/wave_speed = 0.8
shader_parameter/wave_scale = 15.0
shader_parameter/highlight_threshold = 0.6

[node name="OceanSurface" type="Node2D"]
script = ExtResource("1_ocean")

[node name="OceanBG" type="ColorRect" parent="."]
z_index = -10
offset_left = -2000.0
offset_top = -2000.0
offset_right = 2000.0
offset_bottom = 2000.0
material = SubResource("ShaderMaterial_ocean")

[node name="Island1" type="StaticBody2D" parent="."]
position = Vector2(-400, -300)
collision_layer = 1

[node name="Sprite" type="ColorRect" parent="Island1"]
offset_left = -50.0
offset_top = -35.0
offset_right = 50.0
offset_bottom = 35.0
color = Color(0.35, 0.65, 0.3, 1)

[node name="Sand" type="ColorRect" parent="Island1"]
offset_left = -55.0
offset_top = -40.0
offset_right = 55.0
offset_bottom = 40.0
z_index = -1
color = Color(0.9, 0.85, 0.6, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island1"]

[node name="Island2" type="StaticBody2D" parent="."]
position = Vector2(600, 200)
collision_layer = 1

[node name="Sprite" type="ColorRect" parent="Island2"]
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0
color = Color(0.3, 0.55, 0.25, 1)

[node name="Sand" type="ColorRect" parent="Island2"]
offset_left = -45.0
offset_top = -35.0
offset_right = 45.0
offset_bottom = 35.0
z_index = -1
color = Color(0.88, 0.82, 0.55, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island2"]

[node name="Island3" type="StaticBody2D" parent="."]
position = Vector2(-200, 500)
collision_layer = 1

[node name="Sprite" type="ColorRect" parent="Island3"]
offset_left = -35.0
offset_top = -25.0
offset_right = 35.0
offset_bottom = 25.0
color = Color(0.4, 0.7, 0.35, 1)

[node name="Sand" type="ColorRect" parent="Island3"]
offset_left = -40.0
offset_top = -30.0
offset_right = 40.0
offset_bottom = 30.0
z_index = -1
color = Color(0.85, 0.8, 0.55, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Island3"]

[node name="Vehicle" type="CharacterBody2D" parent="."]
position = Vector2(0, 200)
collision_layer = 2
collision_mask = 1
script = ExtResource("2_vehicle")

[node name="Sprite2D" type="Sprite2D" parent="Vehicle"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vehicle"]

[node name="WakeParticles" type="GPUParticles2D" parent="Vehicle"]
emitting = false
amount = 20
lifetime = 1.0

[node name="Camera2D" type="Camera2D" parent="Vehicle"]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 5.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.15
drag_top_margin = 0.15
drag_right_margin = 0.15
drag_bottom_margin = 0.15

[node name="VehicleStateMachine" type="Node" parent="Vehicle"]
script = ExtResource("6_vsm")

[node name="DiveSpot1" type="Area2D" parent="."]
position = Vector2(200, -200)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_dive")
biome = "shallow"
spot_name = "Coral Shallows"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiveSpot1"]

[node name="DiveSpot2" type="Area2D" parent="."]
position = Vector2(-500, 100)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_dive")
biome = "shallow"
spot_name = "Sandy Reef"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiveSpot2"]

[node name="DiveSpot3" type="Area2D" parent="."]
position = Vector2(400, 600)
collision_layer = 0
collision_mask = 2
script = ExtResource("3_dive")
biome = "deep"
spot_name = "The Abyss"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DiveSpot3"]

[node name="HubReturnZone" type="Area2D" parent="."]
position = Vector2(0, 300)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HubReturnZone"]

[node name="Marker" type="ColorRect" parent="HubReturnZone"]
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
color = Color(0.9, 0.7, 0.3, 0.5)

[node name="Label" type="Label" parent="HubReturnZone"]
offset_left = -30.0
offset_top = -35.0
offset_right = 30.0
offset_bottom = -18.0
theme_override_font_sizes/font_size = 10
text = "Harbor"
horizontal_alignment = 1

[node name="VehicleHUD" type="CanvasLayer" parent="."]
layer = 5
script = ExtResource("7_vhud")
